Update the z-index avoid to be covered by menu

--- a/public/css/ranking.less
+++ b/public/css/ranking.less
@@ -1,5 +1,5 @@
 .ranking-title-container {
-    z-index: 4;
+    z-index: 3;
 }
 
 .ranking-subtitle-container {
